<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="recipebook.presentation.ViewRecipeActivity">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RecipeName"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:onClick="buttonOnClick"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_box"
        android:layout_width="198dp"
        android:layout_height="211dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name"
        tools:srcCompat="@tools:sample/avatars" />

    <ListView
        android:id="@+id/ingredient_list"
        android:layout_width="196dp"
        android:layout_height="294dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/image_box"
        app:layout_constraintTop_toBottomOf="@+id/ingredients" />


    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:text="Ingredients:"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_box"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

    <ListView
        android:id="@+id/steps_list"
        android:layout_width="335dp"
        android:layout_height="499dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/ingredient_list"
        app:layout_constraintTop_toBottomOf="@+id/steps" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="28dp"
        android:text="Steps:"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ingredients"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

    <ImageButton
        android:id="@+id/add_recipe_bt"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@android:color/transparent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/add_to_saved_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/comments_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:onClick="commentsOnClick"
        android:text="Comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/add_shopping_list_bt"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/shopping_icon"
        app:layout_constraintEnd_toStartOf="@+id/add_recipe_bt"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>