<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1" />

    <EditText
        android:id="@+id/edit_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter review"
        android:inputType="textMultiLine"
        android:lines="5"
        android:minLines="3"
        android:maxLines="10"
        android:gravity="top|start"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/cancel_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="Cancel" />

        <Button
            android:id="@+id/create_review_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:text="Submit" />
    </LinearLayout>

</LinearLayout>