<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0"
            android:text="Edit" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            android:text="Clear" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>