<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_list_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="TextView"
                android:textColor="#5E35B1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/frequency"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:text="TextView" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CC5A5A"
            android:text="Delete"
            android:visibility="visible"
            app:cornerRadius="0dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>