<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="recipebook.presentation.BrowseRecipeFragment">

    <com.google.android.material.navigationrail.NavigationRailView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:menu="@menu/bottom_navigation_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="0dp"
        app:defaultNavHost="true"
        app:layout_constraintStart_toStartOf="parent"
        app:navGraph="@navigation/navigation_graph" />

</LinearLayout>